2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterx.h, -src/filterx.cpp, src/Makefile.am:
	  - Drop unused member "fileopen".
	  - Adjust c-tor to use initialization list; also initialize
	    wordBreakStr to a default value.
	  - Move all FilterX member functions to header and make them inline.
	  - Drop now-unneeded filterx.cpp.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterx.cpp, src/filterx.h:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordstack.h:
	  - Add preprocessor to prevent duplicated inclusion.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordstack.h:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Move tis2uni() and isthaidigit() to worddef.h

	* src/worddef.h:
	  - Define tis2uni() & isThaiDigit() inline functions here.
	* src/abswordseg.cpp:
	  - Drop old macros.
	  - Include worddef.h.
	  - Replace isthaidigit() calls with isThaiDigit().

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Replace some internal char classifiers with <ctype.h>

	* src/worddef.h, src/filterrtf.cpp, src/filterhtml.cpp:
	  - Drop isSpace(), use isspace() instead.
	  - Drop isHex(), use isxdigit() instead.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/worddef.h:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp:
	  - Declare internal functions static.
	  - Simplify myyisspace() and make it bool.
	  - Simplify RemoveJunkChars() and invert IsJunkChar() to
	    IsValidChar().

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::MaxWordSeg):
	  - Reformat c-tor.
