@@ -1,5 +1,10 @@
 2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/filefilter.h, src/filefilter.cpp:
+	  - Apply "indent -nut" + manual adjustments.
+
+2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/filterx.h, -src/filterx.cpp, src/Makefile.am:
 	  - Drop unused member "fileopen".
 	  - Adjust c-tor to use initialization list; also initialize
